--- a/src/Components/Trends/trends.scss
+++ b/src/Components/Trends/trends.scss
@@ -1,6 +1,6 @@
 .trends{
   width: 27rem;
   background-color: black;
-  border-left: 2px solid #5c5f61;
+  border-left: 1px solid #5c5f61;
   height: 100%;
 }
