--- a/src/Pages/Homepage/homepage.scss
+++ b/src/Pages/Homepage/homepage.scss
@@ -1,6 +1,6 @@
 .homepage{
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  // align-items: center;
   height: 100%;
 }
